force-app/main/default/objects/New_Beat__c/New_Beat__c.object-meta.xml
<CustomObject>
    <label>Run Beat</label>
    <nameField>
        <displayFormat>BI-{0000}</displayFormat>
        <label>BeatId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Run Beats</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>