force-app/main/default/objects/New_Beat__c/fields/Beat_Date__c.field-meta.xml
<CustomField>
    <fullName>Beat_Date__c</fullName>
    <label>Beat Date</label>
    <type>Date</type>
</CustomField>