force-app/main/default/objects/New_Beat__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>