force-app/main/default/objects/New_Beat__c/fields/RouteName__c.field-meta.xml
<CustomField>
    <fullName>RouteName__c</fullName>
    <formula>Routes__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RouteName</label>
    <type>Text</type>
</CustomField>