force-app/main/default/objects/New_Beat__c/fields/Routes__c.field-meta.xml
<CustomField>
    <fullName>Routes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipName>New_Beats</relationshipName>
    <type>Lookup</type>
</CustomField>