force-app/main/default/objects/New_Beat__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipName>New_Beats</relationshipName>
    <type>Lookup</type>
</CustomField>