force-app/main/default/objects/New_Beat__c/fields/WarehouseName__c.field-meta.xml
<CustomField>
    <fullName>WarehouseName__c</fullName>
    <formula>Warehouse__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WarehouseName</label>
    <type>Text</type>
</CustomField>