force-app/main/default/objects/New_Beat__c/listViews/All_Beats.listView-meta.xml
<ListView>
    <fullName>All_Beats</fullName>
    <columns>NAME</columns>
    <columns>Beat_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>